--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -39,6 +39,7 @@
 
   @media (max-width: $mobile-width-max) {
     margin-bottom: 24px;
+    width: 290px;
     font-size: 20px;
     line-height: 20px;
   }
